[metadata]
name = fedex_tracking
version = 0.0.1
author = Ryan Hayward
author_email = rhhayward@att.net
description = Get Fedex tracking info
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rhhayward/py_fedex_tracking
project_urls =
    Bug Tracker = https://github.com/rhhayward/py_fedex_tracking/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
